--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1,5 +1,8 @@
-// This file is intentionally empty.
+// Post CSS From Vetagro
 
+.bg-dark-grey {
+    background-color: $gray-900;
+}
 .pagelayout-frontpage {
     #region-main {
         border: initial;
@@ -48,12 +51,14 @@
     min-width: 30%;
 }
 
-.navbar-light .navbar-nav .nav-link {
+.navbar-light .nav-main-content .navbar-nav .nav-link {
     &:focus,
     &:hover {
-        color: $gray-900;
+        color: $dark;
         font-weight: bold;
-        text-decoration: $primary underline;
+        box-shadow: inset 0 -0.1em white,
+        inset 0 -0.2em $primary; // No text-decoration thickness available across browsers.
+        //https://developer.mozilla.org/fr/docs/Web/CSS/text-decoration-thickness
     }
 
     color: $gray-900;
@@ -76,7 +81,57 @@
     a:focus {
         color: $gray-900;
     }
+    h3, .h3 {
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+    .infos-footer {
+        width: 90%;
+    }
 }
+.useful-links {
+    li {
+        border-bottom: solid 0.5px $gray-600 ;
+        margin-top: 1rem;
+    }
+}
+.address {
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+    li.postaddress,
+    li.phone {
+        padding-left: 1.3em;
+        &::before {
+            display: inline-block;
+            margin-left: -1.3em; /* same as padding-left set on li */
+            width: 1.3em;
+            font-family: "FontAwesome", serif;
+        }
+    }
+    li.postaddress::before {
+        content: "\f041";
+    }
+    li.phone::before {
+        content: "\f095";
+    }
+    li div {
+        padding-left: 0.3em;
+        color: $gray-600;
+    }
+    li {
+        margin-top: 1rem;
+    }
+}
+
+a.external-link {
+    &::after {
+        content: "\f08e";
+        font-family: "FontAwesome", serif;
+    }
+}
+
 
 // Atto Styles
 
