--- a/scss/post.scss
+++ b/scss/post.scss
@@ -3,6 +3,7 @@
 .bg-dark-grey {
     background-color: $gray-900;
 }
+
 .pagelayout-frontpage {
     #region-main {
         border: initial;
@@ -56,8 +57,8 @@
     &:hover {
         color: $dark;
         font-weight: bold;
-        box-shadow: inset 0 -0.1em white,
-        inset 0 -0.2em $primary; // No text-decoration thickness available across browsers.
+        box-shadow: inset 0 -0.1em white, inset 0 -0.2em $primary;
+        // No text-decoration thickness available across browsers.
         //https://developer.mozilla.org/fr/docs/Web/CSS/text-decoration-thickness
     }
 
@@ -67,6 +68,78 @@
 
 .navbar {
     box-shadow: none;
+
+    .nav-main-content {
+        margin-left: 106px;
+    }
+
+}
+
+#nav-drawer {
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
+    background-image: linear-gradient(to bottom, #056d9e, #023b65);
+    padding: inherit;
+
+    .list-group-item {
+        background-color: transparent;
+        border: none;
+        border-radius: initial;
+        color: white;
+        padding: 1rem 1rem;
+
+        i.icon {
+            font-size: 24px;
+            width: 24px;
+            height: 24px;
+            margin-right: auto;
+        }
+
+        &.active {
+            background-color: rgba(0, 0, 0, .4);
+        }
+
+        .media-left {
+            padding-left: 1em;
+            padding-right: 1em;
+        }
+    }
+
+    & nav.list-group:not(:first-child) {
+        &::before {
+            content: "";
+            width: 50%;
+            height: 1px;
+            background-color: white;
+            margin: auto;
+        }
+    }
+
+}
+
+[data-region="drawer-toggle"] {
+    background-color: #056d9e;
+    position: absolute;
+    height: 100%;
+    margin: auto auto auto -1rem;
+    padding: initial;
+
+    button {
+        color: #fff;
+        padding-left: 0px;
+
+        &:focus {
+            outline: 0;
+            -webkit-box-shadow: initial;
+            box-shadow: initial;
+        }
+
+        i.icon {
+            font-size: 24px;
+            width: 24px;
+            height: 24px;
+            margin-right: auto;
+        }
+    }
 }
 
 #page-footer {
@@ -81,28 +154,35 @@
     a:focus {
         color: $gray-900;
     }
-    h3, .h3 {
+
+    h3,
+    .h3 {
         font-size: 1.5rem;
         font-weight: bold;
     }
+
     .infos-footer {
         width: 90%;
     }
 }
+
 .useful-links {
     li {
-        border-bottom: solid 0.5px $gray-600 ;
+        border-bottom: solid 0.5px $gray-600;
         margin-top: 1rem;
     }
 }
+
 .address {
     ul {
         list-style: none;
         padding: 0;
     }
+
     li.postaddress,
     li.phone {
         padding-left: 1.3em;
+
         &::before {
             display: inline-block;
             margin-left: -1.3em; /* same as padding-left set on li */
@@ -110,16 +190,20 @@
             font-family: "FontAwesome", serif;
         }
     }
+
     li.postaddress::before {
         content: "\f041";
     }
+
     li.phone::before {
         content: "\f095";
     }
+
     li div {
         padding-left: 0.3em;
         color: $gray-600;
     }
+
     li {
         margin-top: 1rem;
     }
