--- a/templates/theme_boost/navbar.mustache
+++ b/templates/theme_boost/navbar.mustache
@@ -21,11 +21,11 @@
 }}
 <nav class="fixed-top navbar navbar-light bg-white navbar-expand moodle-has-zindex" aria-label="{{#str}}sitemenubar, admin{{/str}}">
     {{# additionalinfo.isloggedin }}
-        <div data-region="drawer-toggle" class="d-inline-block">
+        <div data-region="drawer-toggle" class="d-flex align-items-center">
             <button aria-expanded="{{#navdraweropen}}true{{/navdraweropen}}{{^navdraweropen}}false{{/navdraweropen}}"
                     aria-controls="nav-drawer"
                     type="button"
-                    class="btn nav-link mr-auto ml-auto btn-light bg-gray"
+                    class="btn mr-auto ml-auto"
                     data-action="toggle-drawer"
                     data-side="left"
                     data-preference="drawer-open-nav">
