--- a/templates/theme_boost/footer.mustache
+++ b/templates/theme_boost/footer.mustache
@@ -43,7 +43,7 @@
                             </div>
                         {{/ additionalinfo.addresses }}
                     </div>
-                    <div class="row">
+                    <div class="row  extended-footer">
                         {{# additionalinfo.membership }}
                             {{< theme_vetagro/footer_membership }} {{/ theme_vetagro/footer_membership}}
                         {{/ additionalinfo.membership }}
