--- a/templates/theme_boost/login.mustache
+++ b/templates/theme_boost/login.mustache
@@ -42,8 +42,8 @@
     {{> theme_boost/nav-drawer }}
     <div id="page" class="container-fluid">
         <div id="page-content" class="row">
-            <div id="region-main-box" class="col-12">
-                <section id="region-main" class="col-12" aria-label="{{#str}}content{{/str}}">
+            <div id="region-main-box" class="col-12 d-flex">
+                <section id="region-main" class="col-12 d-flex flex-column p-0" aria-label="{{#str}}content{{/str}}">
                     {{{ output.course_content_header }}}
                     {{{ output.main_content }}}
                     {{{ output.course_content_footer }}}
