Add syllabus page layout and split scss files

--- a/templates/local_resourcelibrary/view-cards.mustache
+++ b/templates/local_resourcelibrary/view-cards.mustache
@@ -53,7 +53,7 @@
             </a>
             <div class="card-body py-1 p-r-1 entity-info-container" id="entity-info-container-{{id}}-{{uniqid}}">
                 <div class="d-flex flex-column h-100">
-                    <div class="align-self-start text-truncate">
+                    <div class="align-self-start">
                         <div class="text-muted muted d-flex flex-wrap">
                             {{$category}}{{category}}{{/category}}
                             {{#showshortname}}
@@ -66,7 +66,7 @@
                                 </div>
                             {{/showshortname}}
                         </div>
-                        <span class="entityame mr-2 align-text-top mb-1 font-weight-bolder text-primary">
+                        <span class="entityame py-1 mr-2 align-text-top mb-1 font-weight-bolder text-primary">
                             {{$fullname}}{{fullname}}{{/fullname}}
                         </span>
                         {{^visible}}
