--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1,227 +1,11 @@
 // Post CSS From Vetagro
-
-.bg-dark-grey {
-    background-color: $gray-900;
-}
-
-.pagelayout-frontpage {
-    #region-main {
-        border: initial;
-        padding: initial;
-    }
-}
-
-.header-image {
-    max-height: $navbar-height;
-}
-
-#page-wrapper {
-    nav.navbar {
-        .logo img,
-        .rf-logo {
-            max-height: 78px;
-        }
-
-        @include media-breakpoint-down(sm) {
-            .logo img {
-                max-width: 35px;
-            }
-            .rf-logo {
-                width: 100px;
-            }
-        }
-    }
-}
-
-#page {
-    margin-top: $navbar-height;
-}
-
-#page-login-index #page {
-    margin-top: auto;
-}
-
-// Navbar
-
-
-.navbar-brand {
-    font-size: 1rem; // Normal font.
-    padding-top: initial;
-    padding-bottom: initial;
-}
-
-.site-name,
-.custom-menu {
-    color: $gray-600;
-    min-width: 30%;
-}
-
-.navbar-light .nav-main-content .navbar-nav .nav-link {
-    &:focus,
-    &:hover {
-        color: $dark;
-        font-weight: bold;
-        box-shadow: inset 0 -0.1em white, inset 0 -0.2em $primary;
-        // No text-decoration thickness available across browsers.
-        //https://developer.mozilla.org/fr/docs/Web/CSS/text-decoration-thickness
-    }
-
-    color: $gray-900;
-}
-
-
-.navbar {
-    box-shadow: none;
-
-    .nav-main-content {
-        margin-left: 106px;
-    }
-
-}
-
-#nav-drawer {
-    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
-    background-image: linear-gradient(to bottom, #056d9e, #023b65);
-    padding: inherit;
-
-    .list-group-item {
-        background-color: transparent;
-        border: none;
-        border-radius: initial;
-        color: white;
-        padding: 1rem 1rem;
-
-        i.icon {
-            font-size: 24px;
-            width: 24px;
-            height: 24px;
-            margin-right: auto;
-        }
-
-        &.active {
-            background-color: rgba(0, 0, 0, .4);
-        }
-
-        .media-left {
-            padding-left: 1em;
-            padding-right: 1em;
-        }
-    }
-
-    & nav.list-group:not(:first-child) {
-        &::before {
-            content: "";
-            width: 50%;
-            height: 1px;
-            background-color: white;
-            margin: auto;
-        }
-    }
-
-}
-
-[data-region="drawer-toggle"] {
-    background-color: #056d9e;
-    position: absolute;
-    height: 100%;
-    margin: auto auto auto -1rem;
-    padding: initial;
-
-    button {
-        color: #fff;
-        padding-left: 0px;
-
-        &:focus {
-            outline: 0;
-            -webkit-box-shadow: initial;
-            box-shadow: initial;
-        }
-
-        i.icon {
-            font-size: 24px;
-            width: 24px;
-            height: 24px;
-            margin-right: auto;
-        }
-    }
-}
-
-#page-footer {
-    a,
-    a:hover,
-    a:active,
-    a:visited {
-        color: $gray-600;
-        text-decoration: none;
-    }
-
-    a:focus {
-        color: $gray-900;
-    }
-
-    h3,
-    .h3 {
-        font-size: 1.5rem;
-        font-weight: bold;
-    }
-
-    .infos-footer {
-        width: 90%;
-    }
-}
-
-.useful-links {
-    li {
-        border-bottom: solid 0.5px $gray-600;
-        margin-top: 1rem;
-    }
-}
-
-.address {
-    ul {
-        list-style: none;
-        padding: 0;
-    }
-
-    li.postaddress,
-    li.phone {
-        padding-left: 1.3em;
-
-        &::before {
-            display: inline-block;
-            margin-left: -1.3em; /* same as padding-left set on li */
-            width: 1.3em;
-            font-family: "FontAwesome", serif;
-        }
-    }
-
-    li.postaddress::before {
-        content: "\f041";
-    }
-
-    li.phone::before {
-        content: "\f095";
-    }
-
-    li div {
-        padding-left: 0.3em;
-        color: $gray-600;
-    }
-
-    li {
-        margin-top: 1rem;
-    }
-}
-
-a.external-link {
-    &::after {
-        content: "\f08e";
-        font-family: "FontAwesome", serif;
-    }
-}
-
-
-// Atto Styles
+@import "page.scss";
+@import "navigation.scss";
+@import "footer.scss";
+@import "frontpage.scss";
+@import "login.scss";
+@import "ressourcelibrary.scss";
+@import "syllabus.scss";
 
 
 // Fixes
@@ -278,115 +62,4 @@ body.scrolled #goto-top-link {
     opacity: 1;
     visibility: visible;
     transition: visibility 0s ease 0s, opacity .7s ease .1s;
-}
-
-// Front page
-#page-site-index {
-    .fp-header {
-        background-size: cover;
-        background-image: url([[pix:theme|home/background-home]]);
-        @include media-breakpoint-up(lg) {
-            background-image: url([[pix:theme|home/background-home2x]]);
-        }
-        @include media-breakpoint-up(xl) {
-            background-image: url([[pix:theme|home/background-home3x]]);
-        }
-        min-height: 380px;
-        color: white;
-        display: flex;
-        .container {
-            align-self: center;
-            h3 {
-                font-size: 2.5em;
-                margin-bottom: 1em;
-            }
-        }
-    }
-    .card {
-        border: none;
-    }
-
-    .block {
-        .card-body {
-            text-align: center;
-            .card-title {
-                font-size: xx-large;
-                color: $primary;
-
-                &::after {
-                    content: "";
-                    width: 2rem;
-                    height: 2px;
-                    background-color: $primary;
-                    margin: 0.5rem auto 1em;
-                    display: block;
-                }
-            }
-            .content {
-                text-align: initial;
-            }
-        }
-    }
-    .block_sponsors.block {
-        .card-body {
-            .card-title {
-                color: $gray-500;
-                &::after {
-                    content: none;
-                }
-            }
-        }
-    }
-}
-
-// Block featured courses
-.block_featured_courses {
-    .thumbnail {
-        box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
-        background-color: $white;
-
-    }
-}
-
-// Block vetagro news
-
-.block_vetagro_news {
-    .glide__slide a {
-        max-height: 368px;
-    }
-}
-
-// Extended info on the footer
-.extended-footer {
-    display: none;
-}
-#page-site-index {
-    .extended-footer {
-        display: initial;
-    }
-}
-
-// Login page
-
-#page-login-index {
-    div[role='main'] {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        .main-login-content {
-            flex-grow: 1;
-        }
-    }
-
-}
-
-// Resource library
-
-.local-resourcelibrary .dashboard-card-deck {
-    .dashboard-card-img {
-        height: 12rem;
-    }
-    .card-body {
-        min-height: 7rem;
-    }
 }
