Fix them in ref. with templates

--- a/scss/frontpage.scss
+++ b/scss/frontpage.scss
@@ -70,6 +70,9 @@
 
 .block_vetagro_news {
     .glide__slide a {
-        max-height: 368px;
+        height: 400px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
     }
 }
