--- a/templates/theme_boost/login.mustache
+++ b/templates/theme_boost/login.mustache
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    {{> theme_boost/footer }}
+    {{{ output.standard_end_of_body_html }}}
 </div>
 
 </body>
