--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1,4 +1,6 @@
 // Post CSS From Vetagro
+@import "../../clboost/scss/commons";
+@import "../../clboost/scss/drawer";
 @import "page.scss";
 @import "navigation.scss";
 @import "footer.scss";
@@ -6,7 +8,6 @@
 @import "login.scss";
 @import "ressourcelibrary.scss";
 @import "syllabus.scss";
-
 
 // Fixes
 
