--- a/templates/theme_boost/navbar.mustache
+++ b/templates/theme_boost/navbar.mustache
@@ -42,10 +42,17 @@
                  {{# additionalinfo.isloggedin }}<img src="{{output.get_compact_logo_url}}" alt="{{sitename}}"> {{/ additionalinfo.isloggedin }}
                  {{^ additionalinfo.isloggedin }}<img src="{{output.get_logo_url}}" alt="{{sitename}}"> {{/ additionalinfo.isloggedin }}
              </span>
-            <span class="site-name d-none d-md-inline pl-3">{{{ sitename }}}</span>
+            <span class="site-name text-truncate d-none d-md-inline pl-3">{{{ sitename }}}</span>
         </a>
 
-        <ul class="navbar-nav d-none d-md-flex m-auto m-r-1 custom-menu justify-content-around">
+        <!-- We display the menu twice here, once the full menu, the second one is a shorter version -->
+        <ul class="navbar-nav m-auto d-none d-sm-block m-r-1 d-md-flex justify-content-around">
+            <!-- custom_menu -->
+            {{{ output.custom_menu }}}
+            <!-- page_heading_menu -->
+            {{{ output.page_heading_menu }}}
+        </ul>
+        <ul class="navbar-nav m-auto d-flex d-sm-none m-r-1 custom-menu-small justify-content-around">
             <!-- custom_menu -->
             {{{ output.custom_menu }}}
             <!-- page_heading_menu -->
