--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -1,5 +1,6 @@
 // Navbar
-
+$light-drawer-shade: lighten($primary, 12);
+$drawer-linear-gradient: linear-gradient(to bottom, $light-drawer-shade, $primary);
 .navbar-brand {
     font-size: 1rem; // Normal font.
     padding-top: initial;
@@ -12,6 +13,12 @@
     min-width: 30%;
 }
 
+.site-name {
+    font-size: x-large;
+    font-family: "Marianne";
+    font-style: italic;
+    vertical-align: middle;
+}
 .navbar-light .nav-main-content .navbar-nav .nav-link {
     &:focus,
     &:hover {
@@ -25,19 +32,23 @@
     color: $gray-900;
 }
 
+body.notloggedin .navbar .nav-main-content {
+    margin-left: auto;
+}
 
 .navbar {
     box-shadow: none;
     height: $navbar-height;
+
     .nav-main-content {
-        margin-left: 106px;
+        margin-left: $drawer-width-semi-expanded;
     }
 
 }
 
 #nav-drawer {
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
-    background-image: linear-gradient(to bottom, #056d9e, #023b65);
+    background-image: $drawer-linear-gradient;
     padding: inherit;
 
     .list-group-item {
@@ -77,18 +88,18 @@
 
     /* Hide scrollbar for Chrome, Safari and Opera */
     &::-webkit-scrollbar {
-        width: 0px;  /* Remove scrollbar space */
-        background: transparent;  /* Optional: just make scrollbar invisible */
+        width: 0px; /* Remove scrollbar space */
+        background: transparent; /* Optional: just make scrollbar invisible */
     }
 
     /* Hide scrollbar for IE, Edge and Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
+    -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none;
 
 }
 
 [data-region="drawer-toggle"] {
-    background-color: #056d9e;
+    background-color: $light-drawer-shade;
     position: absolute;
     height: $navbar-height;
     margin: auto auto auto -1rem;
@@ -109,6 +120,20 @@
             font-size: 24px;
             height: 24px;
             margin-right: auto;
+        }
+    }
+}
+
+// Squeeze navbar to minimum size on small screens.
+@include media-breakpoint-down(md) {
+    [data-region="drawer-toggle"],
+    .navbar {
+        height: auto;
+        padding-top: initial;
+        padding-bottom: initial;
+        .nav-link {
+            padding-top: initial;
+            padding-bottom: initial;
         }
     }
 }
