--- a/templates/theme_boost/flat_navigation.mustache
+++ b/templates/theme_boost/flat_navigation.mustache
@@ -114,7 +114,7 @@
 {{/ flatnavigation }}
 </ul>
 </nav>
-<nav class="list-group nav-drawer-maximise mt-auto mb-2">
+<nav class="list-group nav-drawer-maximise-action mt-auto mb-2">
     <ul>
         <li>
             <a class="list-group-item list-group-item-action" href="#">
