--- a/templates/core/loginform.mustache
+++ b/templates/core/loginform.mustache
@@ -122,7 +122,24 @@
                             <div class="alert alert-danger" role="alert" data-aria-autofocus="true">{{error}}</div>
                         </div>
                     {{/error}}
-
+                    {{#additionalinfo.isvetagrotice}}
+                    {{#hasidentityproviders}}
+                        <h6 class="pt-5">{{#str}} vetagrotice_idplogin, theme_vetagro {{/str}}</h6>
+                        <div class="potentialidplist mt-3">
+                            {{#identityproviders}}
+                                <div class="potentialidp">
+                                    <a href="{{url}}" title={{#quote}}{{name}}{{/quote}} class="btn btn-secondary btn-block">
+                                        {{#iconurl}}
+                                            <img src="{{iconurl}}" alt="" width="24" height="24"/>
+                                        {{/iconurl}}
+                                        {{name}}
+                                    </a>
+                                </div>
+                            {{/identityproviders}}
+                        </div>
+                        <h6 class="pt-5">{{#str}} vetagrotice_manuallogin, theme_vetagro {{/str}}</h6>
+                    {{/hasidentityproviders}}
+                    {{/additionalinfo.isvetagrotice}}
                     <div class="row justify-content-md-center">
                         <div class="col-md-12">
                             <form class="mt-3" action="{{loginurl}}" method="post" id="login">
@@ -182,22 +199,23 @@
                                     </form>
                                 </div>
                             {{/canloginasguest}}
-
-                            {{#hasidentityproviders}}
-                                <h6 class="mt-2">{{#str}} potentialidps, auth {{/str}}</h6>
-                                <div class="potentialidplist mt-3">
-                                    {{#identityproviders}}
-                                        <div class="potentialidp">
-                                            <a href="{{url}}" title={{#quote}}{{name}}{{/quote}} class="btn btn-secondary btn-block">
-                                                {{#iconurl}}
-                                                    <img src="{{iconurl}}" alt="" width="24" height="24"/>
-                                                {{/iconurl}}
-                                                {{name}}
-                                            </a>
-                                        </div>
-                                    {{/identityproviders}}
-                                </div>
-                            {{/hasidentityproviders}}
+                            {{^additionalinfo.isvetagrotice}}
+                                {{#hasidentityproviders}}
+                                    <h6 class="mt-2">{{#str}} potentialidps, auth {{/str}}</h6>
+                                    <div class="potentialidplist mt-3">
+                                        {{#identityproviders}}
+                                            <div class="potentialidp">
+                                                <a href="{{url}}" title={{#quote}}{{name}}{{/quote}} class="btn btn-secondary btn-block">
+                                                    {{#iconurl}}
+                                                        <img src="{{iconurl}}" alt="" width="24" height="24"/>
+                                                    {{/iconurl}}
+                                                    {{name}}
+                                                </a>
+                                            </div>
+                                        {{/identityproviders}}
+                                    </div>
+                                {{/hasidentityproviders}}
+                            {{/additionalinfo.isvetagrotice}}
                         </div>
                     </div>
                 </div>
