Updates for the version 4 of the vetagro theme
    - added custom icons for the topnavbar using a custom icon_system_fontawesome
    - removed teacher dashboard link from top navbar (it is still in the course page)
    - restructured the scss loading order using commons.scss
    - made a frontpage version of the navbar and course navbar to follow the figma designs
    - rounded corners following figma designs
    - restructured the login / signup page
    - simplify the global search input
    - restyled to 'add activity' 'add section' buttons
    - huge page headings, except for activity headings
    - restyle primary and secondary navigation to be more in sync with the figma designs

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -4,18 +4,20 @@
     a:hover,
     a:active,
     a:visited {
-        color: $gray-600;
+        color: $gray-300;
         text-decoration: none;
     }
 
     a:focus {
-        color: $gray-900;
+        color: $white;
     }
 
     h3,
     .h3 {
         font-size: 1.5rem;
         font-weight: bold;
+        line-height: 2.5rem;
+        color: $white;
     }
 
     .infos-footer {
