--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -20,15 +20,6 @@ $drawer-linear-gradient: linear-gradient(to bottom, $light-drawer-shade, $primar
     vertical-align: middle;
 }
 .navbar-light .nav-main-content .navbar-nav .nav-link {
-    &:focus,
-    &:hover {
-        color: $dark;
-        font-weight: bold;
-        box-shadow: inset 0 -0.1em white, inset 0 -0.2em $primary;
-        // No text-decoration thickness available across browsers.
-        //https://developer.mozilla.org/fr/docs/Web/CSS/text-decoration-thickness
-    }
-
     color: $gray-900;
 }
 
@@ -36,104 +27,88 @@ body.notloggedin .navbar .nav-main-content {
     margin-left: auto;
 }
 
-.navbar {
-    box-shadow: none;
-    height: $navbar-height;
-
-    .nav-main-content {
-        margin-left: $drawer-width-semi-expanded;
-    }
-
-}
-
-#nav-drawer {
-    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
-    background-image: $drawer-linear-gradient;
-    padding: inherit;
-
-    .list-group-item {
-        background-color: transparent;
-        border: none;
-        border-radius: initial;
-        color: white;
-        padding: 1rem 1rem;
-
-        i.icon {
-            font-size: 24px;
-            width: 24px;
-            height: 24px;
-            margin-right: auto;
-        }
-
-        &.active {
-            background-color: rgba(0, 0, 0, .4);
-        }
-
-        .media-left {
-            padding-left: 1em;
-            padding-right: 1em;
-        }
-    }
-
-    & nav.list-group:not(:first-child) {
-        &::before {
-            content: "";
-            width: 50%;
-            height: 1px;
-            background-color: white;
-            margin: auto;
-        }
-    }
-
-
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    &::-webkit-scrollbar {
-        width: 0px; /* Remove scrollbar space */
-        background: transparent; /* Optional: just make scrollbar invisible */
-    }
-
-    /* Hide scrollbar for IE, Edge and Firefox */
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none;
-
-}
-
-[data-region="drawer-toggle"] {
-    background-color: $light-drawer-shade;
-    position: absolute;
-    height: $navbar-height;
-    margin: auto auto auto -1rem;
-    padding: initial;
-
-    button {
-        color: #fff;
-        padding-left: 0px;
-
-        &:focus {
-            outline: 0;
-            -webkit-box-shadow: initial;
-            box-shadow: initial;
-        }
-
-        i.icon {
-            padding-left: 10px; // Adjust so the button is aligned with other nav icons.
-            font-size: 24px;
-            height: 24px;
-            margin-right: auto;
-        }
+.secondary-navigation {
+    padding: 0 calc(0.5rem + 15px);
+    .navigation {
+        padding: 0;
     }
 }
 
-// Squeeze navbar to minimum size on small screens.
-@include media-breakpoint-down(md) {
-    [data-region="drawer-toggle"],
-    .navbar {
-        height: auto;
-        padding-top: initial;
-        padding-bottom: initial;
+.navbar.fixed-top {
+    padding-top: 0;
+    padding-bottom: 0;
+    box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
+}
+
+.navbar.fixed-top .navbar-brand .logo {
+    max-height: $navbar-height;
+}
+
+.simplesearchform {
+    min-width: 40px;
+    min-height: 40px;
+    text-align: center;
+    margin: 0 .3rem;
+    position: relative;
+    .fa-bell,
+    .fa-comment,
+    .fa-search {
+        color: $body-color;
+        margin: 0;
+    }
+}
+.simplesearchform .collapse.show,
+.simplesearchform .collapsing {
+    position: inherit;
+    height: 40px;
+    background-color: transparent;
+    right: 0;
+    width: 200px;
+}
+
+.popover-region-toggle {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.primary-navigation,
+.secondary-navigation {
+    display: flex;
+    align-items: center;
+    .navigation {
+        height: 35px;
         .nav-link {
-            padding-top: initial;
-            padding-bottom: initial;
+            height: 35px;
+            font-size: 17px;
+            padding: 0;
+            margin: 0 0.7rem;
+            &:hover,
+            &:focus {
+                background-color: transparent;
+                border-bottom-color: $primary;
+                box-shadow: none;
+            }
+        }
+        .nav-item:first-child .nav-link {
+            margin-left: 0;
         }
     }
+}
+.secondary-navigation {
+    margin-bottom: 2rem;
+}
+.path-course .page-header-headings .h2 {
+    font-size: 50px;
+    margin-bottom: 3rem;
+}
+.path-course .page-header-headings .h2:after {
+    content: "";
+    background: $primary;
+    height: 3px;
+    display: block;
+    margin-top: 0.5rem;
+    width: 14%;
 }
