--- a/templates/core/loginform.mustache
+++ b/templates/core/loginform.mustache
@@ -95,40 +95,126 @@
     }
 }}
 
-<div class="row justify-content-center main-login-content">
-    <div class="col-xl-6 col-sm-12">
-        <div class="card border-0">
-            <div class="card-block">
-                {{#logourl}}
-                    <h2 class="text-center">
-                        <a href="{{config.wwwroot}}">
-                            <img src="{{logourl}}" class="img-fluid m-3" title="{{sitename}}" alt="{{sitename}}"/>
-                        </a>
-                    </h2>
-                {{/logourl}}
-                {{^logourl}}
-                    <h2 class="text-center">{{sitename}}</h2>
-                {{/logourl}}
-                <div class="card-body">
-                    {{#cansignup}}
-                        <div class="sr-only">
-                            <a href="{{signupurl}}">{{#str}} tocreatenewaccount {{/str}}</a>
-                        </div>
-                    {{/cansignup}}
+{{#maintenance}}
+<div class="maintenance">
+    <div class="card-title">
+        <h2>{{#str}}sitemaintenance, core_admin{{/str}}</h2>
+    </div>
+    <div>
+        {{{maintenance}}}
+    </div>
+</div>
+{{/maintenance}}
+<div class="d-flex w-100 h-100 p-5 login-bg-wrapper">
 
-                    {{#error}}
-                        <div class="loginerrors mt-3">
-                            <a href="#" id="loginerrormessage" class="accesshide">{{error}}</a>
-                            <div class="alert alert-danger" role="alert" data-aria-autofocus="true">{{error}}</div>
+<div class="loginformcard bg-white p-5">
+    {{#logourl}}
+        <h2 class="text-center">
+            <a href="{{config.wwwroot}}">
+                <img src="{{logourl}}" class="img-fluid m-3" title="{{sitename}}" alt="{{sitename}}"/>
+            </a>
+        </h2>
+    {{/logourl}}
+    {{^logourl}}
+        <h2 class="text-center">{{sitename}}</h2>
+    {{/logourl}}
+    <div class="card-body">
+        {{#cansignup}}
+            <div class="sr-only">
+                <a href="{{signupurl}}">{{#str}} tocreatenewaccount {{/str}}</a>
+            </div>
+        {{/cansignup}}
+
+        {{#error}}
+            <div class="loginerrors mt-3">
+                <a href="#" id="loginerrormessage" class="accesshide">{{error}}</a>
+                <div class="alert alert-danger" role="alert" data-aria-autofocus="true">{{error}}</div>
+            </div>
+        {{/error}}
+        {{#additionalinfo.isvetagrotice}}
+        {{#hasidentityproviders}}
+            <h6 class="pt-5">{{#str}} vetagrotice_idplogin, theme_vetagro {{/str}}</h6>
+            <div class="potentialidplist mt-3">
+                {{#identityproviders}}
+                    <div class="potentialidp">
+                        <a href="{{url}}" title={{#quote}}{{name}}{{/quote}} class="btn btn-primary btn-block">
+                            {{#iconurl}}
+                                <img src="{{iconurl}}" alt="" width="24" height="24"/>
+                            {{/iconurl}}
+                            {{name}}
+                        </a>
+                    </div>
+                {{/identityproviders}}
+            </div>
+            <h6 class="pt-5">{{#str}} vetagrotice_manuallogin, theme_vetagro {{/str}}</h6>
+        {{/hasidentityproviders}}
+        {{/additionalinfo.isvetagrotice}}
+        <div class="row justify-content-md-center">
+            <div class="col-md-12">
+                <form class="mt-3" action="{{loginurl}}" method="post" id="login">
+                    <input id="anchor" type="hidden" name="anchor" value="">
+                    <script>document.getElementById('anchor').value = location.hash;</script>
+                    <input type="hidden" name="logintoken" value="{{logintoken}}">
+                    <div class="form-group">
+                        <label for="username" class="sr-only">
+                            {{^canloginbyemail}}
+                                {{#str}} username {{/str}}
+                            {{/canloginbyemail}}
+                            {{#canloginbyemail}}
+                                {{#str}} usernameemail {{/str}}
+                            {{/canloginbyemail}}
+                        </label>
+                        <input type="text" name="username" id="username"
+                                class="form-control form-control-lg"
+                                value="{{username}}"
+                                placeholder={{#quote}}{{^canloginbyemail}}{{#str}}username{{/str}}{{/canloginbyemail}}{{#canloginbyemail}}{{#str}}usernameemail{{/str}}{{/canloginbyemail}}{{/quote}}
+                                autocomplete="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="sr-only">{{#str}} password {{/str}}</label>
+                        <input type="password" name="password" id="password" value=""
+                                class="form-control form-control-lg"
+                                placeholder={{#quote}}{{#str}}password{{/str}}{{/quote}}
+                                autocomplete="current-password">
+                    </div>
+                    {{#rememberusername}}
+                        <div class="rememberpass mt-3">
+                            <input type="checkbox" name="rememberusername" id="rememberusername" value="1" {{#username}}checked="checked"{{/username}} />
+                            <label for="rememberusername">{{#str}} rememberusername, admin {{/str}}</label>
                         </div>
-                    {{/error}}
-                    {{#additionalinfo.isvetagrotice}}
+                    {{/rememberusername}}
+
+                    <button type="submit" class="btn btn-primary mt-3" id="loginbtn">{{#str}}login{{/str}}</button>
+                </form>
+            </div>
+
+            <div class="col-md-12">
+                <div class="forgetpass mt-3">
+                    <p><a href="{{forgotpasswordurl}}">{{#str}}forgotten{{/str}}</a></p>
+                </div>
+
+                <div class="mt-3">
+                    {{#str}} cookiesenabled {{/str}}
+                    {{{cookieshelpiconformatted}}}
+                </div>
+                {{#canloginasguest}}
+                    <div class="mt-2">
+                        <p>{{#str}}someallowguest{{/str}}</p>
+                        <form action="{{loginurl}}" method="post" id="guestlogin">
+                            <input type="hidden" name="logintoken" value="{{logintoken}}">
+                            <input type="hidden" name="username" value="guest"/>
+                            <input type="hidden" name="password" value="guest"/>
+                            <button class="btn btn-primary" type="submit">{{#str}}loginguest{{/str}}</button>
+                        </form>
+                    </div>
+                {{/canloginasguest}}
+                {{^additionalinfo.isvetagrotice}}
                     {{#hasidentityproviders}}
-                        <h6 class="pt-5">{{#str}} vetagrotice_idplogin, theme_vetagro {{/str}}</h6>
+                        <h6 class="mt-2">{{#str}} potentialidps, auth {{/str}}</h6>
                         <div class="potentialidplist mt-3">
                             {{#identityproviders}}
                                 <div class="potentialidp">
-                                    <a href="{{url}}" title={{#quote}}{{name}}{{/quote}} class="btn btn-secondary btn-block">
+                                    <a href="{{url}}" title={{#quote}}{{name}}{{/quote}} class="btn btn-primary">
                                         {{#iconurl}}
                                             <img src="{{iconurl}}" alt="" width="24" height="24"/>
                                         {{/iconurl}}
@@ -137,135 +223,29 @@
                                 </div>
                             {{/identityproviders}}
                         </div>
-                        <h6 class="pt-5">{{#str}} vetagrotice_manuallogin, theme_vetagro {{/str}}</h6>
                     {{/hasidentityproviders}}
-                    {{/additionalinfo.isvetagrotice}}
-                    <div class="row justify-content-md-center">
-                        <div class="col-md-12">
-                            <form class="mt-3" action="{{loginurl}}" method="post" id="login">
-                                <input id="anchor" type="hidden" name="anchor" value="">
-                                <script>document.getElementById('anchor').value = location.hash;</script>
-                                <input type="hidden" name="logintoken" value="{{logintoken}}">
-                                <div class="form-group">
-                                    <label for="username" class="sr-only">
-                                        {{^canloginbyemail}}
-                                            {{#str}} username {{/str}}
-                                        {{/canloginbyemail}}
-                                        {{#canloginbyemail}}
-                                            {{#str}} usernameemail {{/str}}
-                                        {{/canloginbyemail}}
-                                    </label>
-                                    <input type="text" name="username" id="username"
-                                           class="form-control"
-                                           value="{{username}}"
-                                           placeholder={{#quote}}{{^canloginbyemail}}{{#str}}username{{/str}}{{/canloginbyemail}}{{#canloginbyemail}}{{#str}}usernameemail{{/str}}{{/canloginbyemail}}{{/quote}}
-                                           autocomplete="username">
-                                </div>
-                                <div class="form-group">
-                                    <label for="password" class="sr-only">{{#str}} password {{/str}}</label>
-                                    <input type="password" name="password" id="password" value=""
-                                           class="form-control"
-                                           placeholder={{#quote}}{{#str}}password{{/str}}{{/quote}}
-                                           autocomplete="current-password">
-                                </div>
-                                {{#rememberusername}}
-                                    <div class="rememberpass mt-3">
-                                        <input type="checkbox" name="rememberusername" id="rememberusername" value="1" {{#username}}checked="checked"{{/username}} />
-                                        <label for="rememberusername">{{#str}} rememberusername, admin {{/str}}</label>
-                                    </div>
-                                {{/rememberusername}}
-
-                                <button type="submit" class="btn btn-primary btn-block mt-3" id="loginbtn">{{#str}}login{{/str}}</button>
-                            </form>
-                        </div>
-
-                        <div class="col-md-12">
-                            <div class="forgetpass mt-3">
-                                <p><a href="{{forgotpasswordurl}}">{{#str}}forgotten{{/str}}</a></p>
-                            </div>
-
-                            <div class="mt-3">
-                                {{#str}} cookiesenabled {{/str}}
-                                {{{cookieshelpiconformatted}}}
-                            </div>
-                            {{#canloginasguest}}
-                                <div class="mt-2">
-                                    <p>{{#str}}someallowguest{{/str}}</p>
-                                    <form action="{{loginurl}}" method="post" id="guestlogin">
-                                        <input type="hidden" name="logintoken" value="{{logintoken}}">
-                                        <input type="hidden" name="username" value="guest"/>
-                                        <input type="hidden" name="password" value="guest"/>
-                                        <button class="btn btn-secondary btn-block" type="submit">{{#str}}loginguest{{/str}}</button>
-                                    </form>
-                                </div>
-                            {{/canloginasguest}}
-                            {{^additionalinfo.isvetagrotice}}
-                                {{#hasidentityproviders}}
-                                    <h6 class="mt-2">{{#str}} potentialidps, auth {{/str}}</h6>
-                                    <div class="potentialidplist mt-3">
-                                        {{#identityproviders}}
-                                            <div class="potentialidp">
-                                                <a href="{{url}}" title={{#quote}}{{name}}{{/quote}} class="btn btn-secondary btn-block">
-                                                    {{#iconurl}}
-                                                        <img src="{{iconurl}}" alt="" width="24" height="24"/>
-                                                    {{/iconurl}}
-                                                    {{name}}
-                                                </a>
-                                            </div>
-                                        {{/identityproviders}}
-                                    </div>
-                                {{/hasidentityproviders}}
-                            {{/additionalinfo.isvetagrotice}}
-                        </div>
-                    </div>
-                </div>
+                {{/additionalinfo.isvetagrotice}}
             </div>
-            {{#hasinstructions}}
-                <div class="row justify-content-center mt-3">
-                    <div class="col-xl-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="card-title">
-                                    <h2>{{#str}}firsttime{{/str}}</h2>
-                                </div>
-                                <div>
-                                    {{{instructions}}}
-                                    {{#cansignup}}
-                                        <form class="mt-3" action="{{signupurl}}" method="get" id="signup">
-                                            <button type="submit" class="btn btn-secondary">{{#str}}startsignup{{/str}}</button>
-                                        </form>
-                                    {{/cansignup}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {{/hasinstructions}}
-
         </div>
-    </div>
-    <div class="col-xl-6 col-sm-12 d-none d-md-flex"
-         style="background-image: url({{additionalinfo.randomimageurl}}); background-size: cover;
-                 background-repeat: no-repeat">
+        {{#hasinstructions}}
+        <div class="signupformcard mt-5">
+            <div class="card-title">
+                <h2>{{#str}}firsttime{{/str}}</h2>
+            </div>
+            <div>
+                {{{instructions}}}
+                {{#cansignup}}
+                    <form class="mt-3" action="{{signupurl}}" method="get" id="signup">
+                        <button type="submit" class="btn rounded btn-primary">{{#str}}startsignup{{/str}}</button>
+                    </form>
+                {{/cansignup}}
+            </div>
+        </div>
+        {{/hasinstructions}}
     </div>
 </div>
 
-{{#maintenance}}
-    <div class="row justify-content-center mt-3">
-        <div class="col-xl-6 col-sm-8">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card-title">
-                        <h2>{{#str}}sitemaintenance, core_admin{{/str}}</h2>
-                    </div>
-                    <div>
-                        {{{maintenance}}}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{{/maintenance}}
+
 {{#js}}
     {{#error}}
         require(['jquery'], function($) {
