--- a/templates/theme_boost/navbar.mustache
+++ b/templates/theme_boost/navbar.mustache
@@ -19,55 +19,49 @@
 
     Note that we use additionalinfo from the clboost template engine settings.
 }}
-<nav class="fixed-top navbar navbar-light bg-white navbar-expand moodle-has-zindex" aria-label="{{#str}}sitemenubar, admin{{/str}}">
-    {{# additionalinfo.isloggedin }}
-        <div data-region="drawer-toggle" class="d-flex align-items-center">
-            <button aria-expanded="{{#navdraweropen}}true{{/navdraweropen}}{{^navdraweropen}}false{{/navdraweropen}}"
-                    aria-controls="nav-drawer"
-                    type="button"
-                    class="btn mr-auto ml-auto"
-                    data-action="toggle-drawer"
-                    data-side="left"
-                    data-preference="drawer-open-nav">
-                {{#pix}}i/menubars{{/pix}}
-                <span class="sr-only">{{#str}}sidepanel, core{{/str}}</span>
-            </button>
-        </div>
-    {{/ additionalinfo.isloggedin }}
-    <div class="d-flex flex-row flex-grow-1 nav-main-content">
-        <a href="{{{ config.wwwroot }}}" class="navbar-brand aabtn {{# output.should_display_navbar_logo }}has-logo{{/ output.should_display_navbar_logo }}">
-             <span class="logo">
-                  <img class="rf-logo" src="{{{ config.wwwroot }}}/theme/{{ additionalinfo.themename }}/pix/rf.png" role="presentation"
-                       alt="{{#str}}republiquefrancaise, theme_vetagro{{/str}}">
-                 {{# additionalinfo.isloggedin }}<img src="{{output.get_compact_logo_url}}" alt="{{sitename}}"> {{/ additionalinfo.isloggedin }}
-                 {{^ additionalinfo.isloggedin }}<img src="{{output.get_logo_url}}" alt="{{sitename}}"> {{/ additionalinfo.isloggedin }}
-             </span>
-        </a>
+<nav class="navbar fixed-top navbar-light bg-white navbar-expand" aria-label="{{#str}}sitemenubar, admin{{/str}}">
+    <div class="d-flex course-content-maxwidth flex-nowrap">
+        <button class="navbar-toggler aabtn d-block d-md-none px-1 my-1 border-0" data-toggler="drawers" data-action="toggle" data-target="theme_boost-drawers-primary">
+            <span class="navbar-toggler-icon"></span>
+            <span class="sr-only">{{#str}}sidepanel, core{{/str}}</span>
+        </button>
 
-        <!-- We display the menu twice here, once the full menu, the second one is a shorter version -->
-        <ul class="navbar-nav m-auto d-none d-sm-block m-l-0 d-md-flex justify-content-around">
+        <a href="{{{ config.homeurl }}}" class="navbar-brand d-none d-md-flex align-items-center m-0 mr-4 p-0 aabtn">
+            <div class="logo d-flex">
+                <img class="rf-logo" src="{{{ config.wwwroot }}}/theme/{{ additionalinfo.themename }}/pix/rf.png" role="presentation"
+                    alt="{{#str}}republiquefrancaise, theme_vetagro{{/str}}">
+                {{# additionalinfo.isloggedin }}<img src="{{output.get_compact_logo_url}}" alt="{{sitename}}"> {{/ additionalinfo.isloggedin }}
+                {{^ additionalinfo.isloggedin }}<img src="{{output.get_logo_url}}" alt="{{sitename}}"> {{/ additionalinfo.isloggedin }}
+            </div>
+        </a>
+        {{#primarymoremenu}}
+            <div class="primary-navigation">
+                {{> core/moremenu}}
+            </div>
+        {{/primarymoremenu}}
+
+        <ul class="navbar-nav d-none d-md-flex my-1 px-1">
             <!-- page_heading_menu -->
             {{{ output.page_heading_menu }}}
-            <!-- custom_menu -->
-            {{{ output.custom_menu }}}
         </ul>
-        <ul class="navbar-nav m-auto d-flex d-sm-none m-l-0 custom-menu-small justify-content-around">
-            <!-- page_heading_menu -->
-            {{{ output.page_heading_menu }}}
-            <!-- custom_menu -->
-            {{{ output.custom_menu }}}
-        </ul>
-        <span class="site-name m-auto text-truncate d-none d-md-inline pl-3">{{{ sitename }}}</span>
+
+        <div id="usernavigation" class="navbar-nav ml-auto">
+            {{# output.search_box }}
+                {{{ output.search_box }}}
+            {{/output.search_box}}
+            {{#langmenu}}
+                {{> theme_boost/language_menu }}
+                <div class="divider border-left h-75 align-self-center mx-1"></div>
+            {{/langmenu}}
+            {{{ output.navbar_plugin_output }}}
+            <div class="d-flex align-items-stretch usermenu-container" data-region="usermenu">
+                {{#usermenu}}
+                    {{> core/user_menu }}
+                {{/usermenu}}
+            </div>
+            {{{ output.edit_switch }}}
+        </div>
     </div>
-    <ul class="nav navbar-nav ml-auto">
-        <li class="d-none d-lg-block">
-            {{{ output.search_box }}}
-        </li>
-        <!-- user_menu -->
-        <li class="nav-item d-flex align-items-center">
-            {{{ output.user_menu }}}
-        </li>
-    </ul>
-    <!-- search_box -->
 </nav>
 
+{{> theme_boost/primary-drawer-mobile }}
