Updates for the version 4 of the vetagro theme
    - added custom icons for the topnavbar using a custom icon_system_fontawesome
    - removed teacher dashboard link from top navbar (it is still in the course page)
    - restructured the scss loading order using commons.scss
    - made a frontpage version of the navbar and course navbar to follow the figma designs
    - rounded corners following figma designs
    - restructured the login / signup page
    - simplify the global search input
    - restyled to 'add activity' 'add section' buttons
    - huge page headings, except for activity headings
    - restyle primary and secondary navigation to be more in sync with the figma designs

--- a/scss/login.scss
+++ b/scss/login.scss
@@ -1,11 +1,30 @@
-#page-login-index {
-    div[role='main'] {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        .main-login-content {
-            flex-grow: 1;
-        }
-    }
 
+.pagelayout-login #page {
+    margin-top: 0;
+    .btn {
+        border-radius: 18px;
+        font-size: 17px;
+    }
+    .form-control {
+        border-radius: 3px;
+        font-size: 17px;
+    }
+    .signupform {
+        background-color: $white;
+        padding: 5rem;
+        margin: 3rem;
+        max-width: 700px;
+    }
+}
+.pagelayout-login #page.login-bg-wrapper {
+    background-color: $black;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+}
+
+@include media-breakpoint-up(xl) {
+    .pagelayout-login .loginformcard {
+        max-width: 40vw;
+    }
 }
