--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -22,8 +22,8 @@ $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
 $red: #e0001e !default;
 $orange: #fd7e14 !default;
-$yellow: #F5E625 !default;
-$green: #22B24C !default;
+$yellow: #f5e625 !default;
+$green: #22b24c !default;
 $teal: #20c997 !default;
 $cyan: #369 !default;
 
