Fix search bar color

--- a/scss/page.scss
+++ b/scss/page.scss
@@ -74,3 +74,13 @@ body:not(.path-mod) {
         width: 14%;
     }
 }
+
+body .simplesearchform .fa-search {
+    color: $primary;
+}
+
+#searchform-navbar  {
+    .input-group {
+        margin-top: .8em;
+    }
+}
